<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="535dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_rectang" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="134dp"
        android:layout_height="185dp"
        android:src="@drawable/ic_foto"
        app:civ_border_color="@color/white"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perf"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expe"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/fecha"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.343"
        app:srcCompat="@drawable/ic_calendario" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dir"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        app:srcCompat="@drawable/ic_casita" />

    <TextView
        android:id="@+id/string_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:srcCompat="@drawable/ic_fono" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="142dp"
        android:layout_height="26dp"
        android:gravity="center|left"
        android:text="@string/em"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="22dp"
        android:layout_height="15dp"
        android:gravity="center|right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378"
        app:srcCompat="@drawable/ic_email" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="389dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="9dp"
        android:gravity="center_horizontal"
        android:text="@string/exp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="407dp"
        android:layout_height="309dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962">

        <androidx.cardview.widget.CardView
            android:id="@+id/experience_card"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="45dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#3A91A5"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/experience_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:contentDescription="@string/per"
                android:src="@drawable/ic_p" />

            <TextView
                android:id="@+id/experience_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/per"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/background_card"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="45dp"
            app:cardBackgroundColor="#3A91A5"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/background_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:contentDescription="@string/bak"
                android:src="@drawable/ic_b" />

            <TextView
                android:id="@+id/background_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/bak"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/interest_card"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="#3A91A5"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/interest_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:contentDescription="@string/inte"
                android:src="@drawable/ic_co" />

            <TextView
                android:id="@+id/interest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/inte"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/portfolio_card"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="25dp"
            app:cardBackgroundColor="#3A91A5"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/portfolio_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:contentDescription="@string/por"
                android:src="@drawable/ic_es" />

            <TextView
                android:id="@+id/portfolio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/por"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>